# rython_stdpython

./: CLAUDE.md  Cargo.toml  INTEGRATION_RESULTS.md  README.md  test_sysconfig.py
examples/: generic_api_demo.rs  generic_demo.rs  std_vs_nostd.rs
src/: lib.py  lib.rs  python_signature.rs  test_basic_functions.py  test_collections.py  test_iteration.py
src/stdlib/: collections.rs  datetime.rs  glob.rs  itertools.rs  json.rs  math.rs  mod.rs  os.rs  pathlib.rs  random.rs  string.rs  subprocess.rs  sys.rs  sysconfig.rs  tempfile.rs  venv.rs
tests/: integration_comprehensive.rs  integration_manual.rs  nostd_basic.rs  test_collections.py  test_math.py
