[package]
name = "stdpython"
version = "1.0.4"
edition = "2024"
description = "Python standard library runtime for the Rython compiler ecosystem"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["pyo3", "libc"]
nostd = ["hashbrown", "heapless"]

[dependencies]
pyo3 = {version = "0.25", features=["auto-initialize"], optional = true}

# nostd-compatible dependencies
hashbrown = { version = "0.15", optional = true }
heapless = { version = "0.8", optional = true }

# For Unix system calls
libc = { version = "0.2", optional = true }
